<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_LoadCellSpecification" Id="{41129d57-93e0-4e38-b3c4-08b45800bc83}">
    <Declaration><![CDATA[TYPE ST_LoadCellSpecification :
STRUCT
	lrRatedCapacity		:LREAL;		//kg
	lrRatedOutput		:LREAL;		//mV/V
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>