<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.11">
  <GVL Name="GVL_LoadCell" Id="{0ae75f4a-6c85-4e58-aec8-17d7d3ca68b0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	diBridgeInputs		AT %I*			:DINT;				//ロードセルの出力
	diSupplyInputs		AT %I*			:DINT;				//ロードセルへの印加

	fbLoadCell							:FB_LoadCell;		//ロードセル制御ファンクションブロック
	
	bPersistentDataWriteError			:BOOL;
END_VAR
VAR_GLOBAL PERSISTENT
	lrSpongeWeight						:LREAL	:=1.67;
	lrIronWeight						:LREAL	:=25.67;
	lrPlasticWeight						:LREAL	:=4.33;	

	lrTareWeight 						:LREAL;				//風袋重量[kg]
	bPersistentDataNotInit				:BOOL	:=FALSE;
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>